src/bookings/Bookings.css
#bookings {
  background-color: #ffffff;
}

.bookings-header {
  border-bottom: solid 1px #45565E40;
  padding: 25px 50px;
}

.bookings-container {
  padding: 50px 25px;
}

.booking-details-container {
  padding: 25px 50px;
}

.booking-details-section {
  padding: 20px 0px;
}

.sort-icon {
  padding: 0px 2px 2px 2px;
  cursor: pointer;
  margin-left: 5px;
}

.sort-active {
  background-color: var(--primary);
  opacity: 0.7;
  color: #fff;
  border-radius: 5px;
}

.MuiButtonBase-root.update-booking-btn {
  margin: 5px 30px 0px 0px;
}

.border-left {
  border-left: 2px solid #45565E40;
  padding-left: 50px;
}

.section-header {
  padding-bottom: 15px;
}

.passenger-icon {
  padding-right: 25px;
}

.passenger-field {
  font-weight: bold;
  color: var(--secondary)
}

.booking-details-loading {
  text-align: center;
  padding: 150px;
}

.bookings-filters {
  padding-bottom: 50px;
}

.multi-pnr-view-label {
  padding-right: 20px;
}

